postversion git push

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "build": "bob build",
     "prepublishOnly": "yarn build && yarn test",
+    "postversion": "git push",
     "test": "yarn jest"
   },
   "dependencies": {
