--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stringify-json-object",
   "version": "1.0.5",
-  "description": "Stringify and format a JSON object.",
+  "description": "Stringify and format a JSON object",
   "license": "MIT",
   "author": "Connor White",
   "homepage": "https://connorwhite.org/github/stringify-json-object",
@@ -15,7 +15,9 @@
     "format",
     "pretty",
     "typed",
-    "object"
+    "object",
+    "typescript",
+    "ts"
   ],
   "files": [
     "build"
@@ -23,15 +25,26 @@
   "main": "./build/index.js",
   "scripts": {
     "build": "bob build",
-    "postversion": "git push",
-    "prepublishOnly": "yarn build && yarn test",
-    "test": "yarn jest"
+    "commit": "bob commit",
+    "lint": "bob lint",
+    "release": "bob publish",
+    "test": "bob test"
   },
   "dependencies": {
-    "@bconnorwhite/json-types": "^1.0.5"
+    "json-types": "^1.0.2"
   },
   "devDependencies": {
-    "@bconnorwhite/bob": "^2.1.0",
-    "jest": "^26.4.2"
+    "@bconnorwhite/bob": "^2.9.2"
+  },
+  "eslintConfig": {
+    "extends": "eslint-config-bob"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "bob lint commit"
+    }
+  },
+  "npmpackagejsonlint": {
+    "extends": "npm-package-json-lint-config-bob"
   }
 }
