--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.7",
   "description": "Stringify and format a JSON object",
   "license": "MIT",
+  "private": false,
   "author": "Connor White",
-  "homepage": "https://connorwhite.org/github/stringify-json-object",
+  "contributors": [
+    "Connor White"
+  ],
+  "homepage": "https://connorwhite.dev/github/stringify-json-object",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bconnorwhite/stringify-json-object.git"
   },
+  "bugs": "https://github.com/bconnorwhite/stringify-json-object/issues",
   "keywords": [
     "json",
     "stringify",
@@ -19,32 +24,38 @@
     "typescript",
     "ts"
   ],
+  "type": "module",
+  "main": ".auto/build/index.js",
+  "exports": "./.auto/build/index.js",
+  "types": ".auto/build/index.d.ts",
   "files": [
-    "build"
+    ".auto/build/**/!(tsconfig.tsbuildinfo)"
   ],
-  "main": "./build/index.js",
+  "engines": {
+    "node": "^14.13.1 || >=16.0.0"
+  },
   "scripts": {
-    "build": "bob build",
-    "commit": "bob commit",
-    "lint": "bob lint",
-    "release": "bob publish",
-    "test": "bob test"
+    "build": "auto build",
+    "dev": "auto dev",
+    "lint": "auto lint",
+    "prepack": "yarn build",
+    "release": "auto release",
+    "test": "auto test",
+    "typecheck": "auto typecheck"
   },
   "dependencies": {
-    "types-json": "^1.2.2"
+    "types-json": "^3.0.0"
   },
   "devDependencies": {
-    "@bconnorwhite/bob": "^2.9.2"
+    "autorepo": "^0.1.9"
   },
   "eslintConfig": {
-    "extends": "eslint-config-bob"
+    "extends": "@autosoft/eslint-config"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "bob lint commit"
-    }
+  "jest": {
+    "preset": "@autosoft/jest-preset"
   },
   "npmpackagejsonlint": {
-    "extends": "npm-package-json-lint-config-bob"
+    "extends": "npm-package-json-lint-config-auto"
   }
 }
